--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           Что снижает концентрацию внимания?
         </h3>
         <div class="card__content">
-          <div>
+          <div class="card__content-margin-bl-st">
             <h4 class="card__content-subtitle title-decor">
               Многозадачность
             </h4>
@@ -84,7 +84,7 @@
               Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.
             </p>
           </div>
-          <div>
+          <div class="card__content-margin-bl-st">
             <h4 class="card__content-subtitle title-decor">
               Еда
             </h4>
@@ -92,7 +92,7 @@
               «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.
             </p>
           </div>
-          <div>
+          <div class="card__content-margin-bl-st">
             <h4 class="card__content-subtitle title-decor">
               Гаджеты
             </h4>
@@ -110,31 +110,31 @@
           <h4 class="card__content-subtitle card__content-subtitle_bold title-decor">
             5 простых (на самом деле не очень) советов
           </h4>
-          <h4 class="card__content-subtitle title-decor">
+          <h4 class="card__content-subtitle title-decor card__content-margin-bl-st">
             Представьте небо и облака
           </h4>
           <p class="card__content-paragraph">
             Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.
           </p>
-          <h4 class="card__content-subtitle title-decor">
+          <h4 class="card__content-subtitle title-decor card__content-margin-bl-st">
             Включите музыку
           </h4>
           <p class="card__content-paragraph">
             Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист с «белым шумом» или нейромузыкой.
           </p>
-          <h4 class="card__content-subtitle title-decor">
+          <h4 class="card__content-subtitle title-decor card__content-margin-bl-st">
             Прогуляйтесь
           </h4>
           <p class="card__content-paragraph">
             Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a class="text-shadow">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
           </p>
-          <h4 class="card__content-subtitle title-decor">
+          <h4 class="card__content-subtitle title-decor card__content-margin-bl-st">
             Хорошо ешьте
           </h4>
           <p class="card__content-paragraph">
             Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
           </p>
-          <h4 class="card__content-subtitle title-decor">
+          <h4 class="card__content-subtitle title-decor card__content-margin-bl-st">
             Читайте
           </h4>
           <p class="card__content-paragraph">
