--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="color-scheme" content="dark"/> <!--вконце не забыть дописать после дарк - light-->
+    <meta name="color-scheme" content="dark light"/>
     <title>Сложно сосредоточиться</title>
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="icon" href="./images/favicon.ico" sizes="any" />
@@ -61,7 +61,7 @@
             Многозадачность
           </h4>
           <p class="card__content-paragraph">
-            Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи <a class="text-shadow">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
+            Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи <a href="#0" class="text-shadow">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
           </p>
           <h4 class="card__content-subtitle title-decor">
             Дофамин
@@ -73,7 +73,7 @@
       </article>
       <article class="card">
         <h3 class="card__title">
-          Что снижает концентрацию внимания?
+          Что снижает концентрацию </br>внимания?
         </h3>
         <div class="card__content">
           <div class="card__content-margin-bl-st">
@@ -107,7 +107,7 @@
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)
         </h3>
         <div class="card__content">
-          <h4 class="card__content-subtitle card__content-subtitle_bold title-decor">
+          <h4 class="card__content-subtitle title-decor">
             5 простых (на самом деле не очень) советов
           </h4>
           <h4 class="card__content-subtitle title-decor card__content-margin-bl-st">
@@ -126,7 +126,7 @@
             Прогуляйтесь
           </h4>
           <p class="card__content-paragraph">
-            Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a class="text-shadow">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
+            Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a href="#0" class="text-shadow">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
           </p>
           <h4 class="card__content-subtitle title-decor card__content-margin-bl-st">
             Хорошо ешьте
@@ -156,9 +156,10 @@
       </article>
     </main>
     <footer class="footer decorated-zone">
-        <h2 class="footer__title title-sizing">
+        <h2 class="footer__title title-sizing text-shadow">
           focus
         </h2>
     </footer>
   </body>
-</html>
+  </html>
+  
