--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
       </nav>
       <h1 class="title-sizing text-shadow">no focus</h1>
       <h2 class="header__heading title-decor">
-        Что делать, когда не можешь делать ничего<br>Или почему нам так сложно сконцентрироваться, особенно когда очень надо
+        <p>Что делать, когда не можешь делать ничего</p>
+        <p>Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
       </h2>
     </header>
     <main>
@@ -111,45 +112,45 @@
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)
         </h2>
         <div class="article-list">
+          <h3 class="article-card__title title-decor">
+            5 простых (на самом деле не очень) советов
+          </h3>
           <article class="article-card">
-            <h3 class="article-card__title title-decor">
-              5 простых (на самом деле не очень) советов
-            </h3>
-            <h3 class="article-card__title title-decor card__content-margin-bl-st">
+            <h4 class="article-card__title title-decor card__content-margin-bl-st">
               Представьте небо и облака
-            </h3>
+            </h4>
             <p class="article-card__paragraph">
               Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.
             </p>
           </article>
           <article class="article-card">
-            <h3 class="article-card__title title-decor card__content-margin-bl-st">
+            <h4 class="article-card__title title-decor card__content-margin-bl-st">
               Включите музыку
-            </h3>
+            </h4>
             <p class="article-card__paragraph">
               Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист с «белым шумом» или нейромузыкой.
             </p>
           </article>
           <article class="article-card">
-            <h3 class="article-card__title title-decor card__content-margin-bl-st">
+            <h4 class="article-card__title title-decor card__content-margin-bl-st">
               Прогуляйтесь
-            </h3>
+            </h4>
             <p class="article-card__paragraph">
               Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a href="#0" class="text-shadow">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
             </p>
           </article>
           <article class="article-card">
-            <h3 class="article-card__title title-decor card__content-margin-bl-st">
+            <h4 class="article-card__title title-decor card__content-margin-bl-st">
               Хорошо ешьте
-            </h3>
+            </h4>
             <p class="article-card__paragraph">
               Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
             </p>
           </article>
           <article class="article-card">
-            <h3 class="article-card__title title-decor card__content-margin-bl-st">
+            <h4 class="article-card__title title-decor card__content-margin-bl-st">
               Читайте
-            </h3>
+            </h4>
             <p class="article-card__paragraph">
               Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.
             </p>
