--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
       </nav>
       <h1 class="title-sizing text-shadow">no focus</h1>
       <h2 class="header__heading title-decor">
-        <p>Что делать, когда не можешь делать ничего</p>
-        <p>Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
+        <span>Что делать, когда не можешь делать ничего</span>
+        <span>Или почему нам так сложно сконцентрироваться, особенно когда очень надо</span>
       </h2>
     </header>
     <main>
